# advent-of-code-2024

./: .gitignore  Cargo.toml
src/: main.rs  utils.rs
src/d01/: alt.rs  main.rs  mod.rs
src/d02/: alt.rs  main.rs  mod.rs
src/d03/: main.rs
src/d04/: main.rs
src/d05/: main.rs
src/d06/: main.rs
src/d07/: main.rs
src/d1/: alt.rs  main.rs
src/d10/: main.rs
src/d11/: main.rs
src/d12/: main.rs
src/d2/: alt.rs  main.rs
src/d3/: main.rs
src/d4/: main.rs
src/d5/: main.rs  mod.rs
src/d6/: main.rs
src/d7/: main.rs
src/d8/: main.rs
src/d9/: main.rs  mod.rs
template/: main.rs
