[package]
name = "e01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.54.0"
enum-as-inner = "0.5.1"
itertools = "0.13.0"
nom = "7.1.1"
rayon = "1.10.0"
recap = "0.1.2"
regex = "1.11.1"
serde = "1.0.215"
